# mycelium

./: .gitignore  2.py  Cargo.toml  default.snbt  dim.json  dimension.nbt  dimension_codec.nbt  hypixel  local  readme.md  statusping.py
src/: main.rs  packet.rs  packet_ids.rs  response_data.rs
src/packets/: handshake.rs  login.rs  play.rs
yams/: Makefile  a.out  main.cpp
