[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft-varint = "0.2.0"
log = "0.4.14"
flexi_logger = {version = "0.22.0", features = ["use_chrono_for_offset", "colors"]}
byteorder = "1.4.3"
# byteorder_async = "1.2.0"
base64 = "0.20.0-alpha.1"
serde = {version="1", features=["derive"]}
serde_json = "1"
nibbler = "0.2.3"
hematite-nbt = "0.5.2"
# quartz_nbt = "0.2.5"
hexdump = "0.1.1"
bit-set = "0.5.2"
# tokio = { version = "1.15.0", features = ["full"] }
